# py-otel

./: .env  compose.yaml  pyproject.toml
app/: app.py
