[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Diogooliveira10",email = "ddiogooliveira9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
