[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Diogooliveira10",email = "ddiogooliveira9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.otel.dependencies]
opentelemetry-distro = "^0.51b0"
opentelemetry-exporter-otlp = "^1.30.0"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.32.2"

[tool.poe]
envfile = '.env'

[tool.poe.tasks.serve]
shell = 'opentelemetry-instrument uvicorn app.app:app'

[tool.poe.tasks]
otel-install = 'opentelemetry-bootstrap -a install'